[gd_scene load_steps=8 format=2]

[ext_resource path="res://Crate/Wood_Crate_001_roughness.jpg" type="Texture" id=1]
[ext_resource path="res://Crate/Wood_Crate_001_basecolor.jpg" type="Texture" id=2]
[ext_resource path="res://Crate/Wood_Crate_001_normal.jpg" type="Texture" id=3]
[ext_resource path="res://Crate/Crate.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 2 )
roughness_texture = ExtResource( 1 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 3 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 2 )
roughness_texture = ExtResource( 1 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 3 )

[node name="Crate" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 4 )

[node name="Bodies" type="Spatial" parent="." groups=[
"Crate",
]]

[node name="Up" type="RigidBody" parent="Bodies" groups=[
"Crate",
]]
collision_layer = 25
mode = 3

[node name="CSGBox" type="CSGBox" parent="Bodies/Up"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.077518, 0, 0, -0.91419 )
material = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Bodies/Up"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.077518, 0, 0, -0.91419 )
shape = SubResource( 2 )

[node name="Down" type="RigidBody" parent="Bodies" groups=[
"Crate",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.83824 )
collision_layer = 25
mode = 3

[node name="CSGBox" type="CSGBox" parent="Bodies/Down"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.077518, 0, 0, -0.91419 )
material = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Bodies/Down"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.077518, 0, 0, -0.91419 )
shape = SubResource( 2 )

[node name="Left" type="RigidBody" parent="Bodies" groups=[
"Crate",
]]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 25
mode = 3

[node name="CSGBox" type="CSGBox" parent="Bodies/Left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.077518, 0, 0, -0.91419 )
material = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Bodies/Left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.077518, 0, 0, -0.91419 )
shape = SubResource( 2 )

[node name="Right" type="RigidBody" parent="Bodies" groups=[
"Crate",
]]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 25
mode = 3

[node name="CSGBox" type="CSGBox" parent="Bodies/Right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.077518, 0, 0, -0.91419 )
material = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Bodies/Right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.077518, 0, 0, -0.91419 )
shape = SubResource( 2 )

[node name="Top" type="RigidBody" parent="Bodies" groups=[
"Crate",
]]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
collision_layer = 25
mode = 3

[node name="CSGBox" type="CSGBox" parent="Bodies/Top"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.077518, 0, 0, -0.91419 )
material = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Bodies/Top"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.077518, 0, 0, -0.91419 )
shape = SubResource( 2 )

[node name="CenterPoint" type="Area" parent="."]

[node name="destroyTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="destroyTimer" to="." method="_on_destroyTimer_timeout"]
